Se añadieron más pruebas de unidad para la covertura en jacoco